--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint",
     "start": "node server.js",
-    "build:dev": "NODE_ENV=development webpack --config webpack.config.js",
+    "build:dev": "NODE_ENV=development webpack-dev-server --inline --hot --config webpack.config.js",
     "build": "NODE_ENV=production webpack -p --config webpack.config.js"
   },
   "repository": {
@@ -27,9 +27,19 @@
   },
   "homepage": "https://github.com/wpultz/react-learning-examples#readme",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.22.0",
     "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   }
 }
