--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint",
-    "start": "node server.js",
+    "start:dev": "npm run build:dev & node server.js",
+    "start": "npm run build & node server.js",
     "build:dev": "NODE_ENV=development webpack-dev-server --inline --hot --config webpack.config.js",
     "build": "NODE_ENV=production webpack -p --config webpack.config.js"
   },
