--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
