--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "build": "NODE_ENV=production webpack -p --config webpack.config.js"
   },
   "jest": {
-    "collectCoverageFrom": ["tictactoe/**/*.{js,jsx}"],
-    "coverageReporters": ["lcov"],
+    "collectCoverageFrom": [
+      "tictactoe/**/*.{js,jsx}"
+    ],
+    "coverageReporters": [
+      "lcov"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 80,
@@ -52,6 +56,7 @@
     "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
