--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint",
-    "tsc": "tsc",
     "start:dev": "npm run build:dev & node server.js",
     "start": "npm run build & node server.js",
     "build:dev": "NODE_ENV=development webpack-dev-server --inline --hot --config webpack.config.js",
@@ -48,10 +47,13 @@
   "dependencies": {
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.6",
+    "@types/react-modal": "^3.1.2",
+    "@types/react-redux": "^6.0.2",
+    "@types/redux": "3.6.31",
     "awesome-typescript-loader": "^5.0.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -75,8 +77,9 @@
     "style-loader": "^0.19.1",
     "typescript": "^2.9.1",
     "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^4.11.0",
+    "webpack-cli": "^3.0.2",
+    "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
     "babel-jest": "^22.1.0",
